--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css" >
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="/css/slidePicture.css">
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <script src="/javascript/javaScript.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
     <div class="MyBackground">
@@ -58,29 +61,29 @@
             <p>&nbsp;&nbsp;Here is about my Passion</p>
         </div>
     </div>
-    <div class="row" style="height: 1000px;">
+    <div class="row" style="height: 1100px;">
         <div class="col-2"></div>
         <div class="container col-8">
-            <div class="slides">
+            <div class="slides ">
                 <div class="number">1/6</div>
-                <img src="https://wallpaperaccess.com/full/254381.jpg" style="width:100%">
+                <img src="https://images.unsplash.com/photo-1471922694854-ff1b63b20054?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80" style="width:100%">
             </div>
-            <div class="slides">
+            <div class="slides unvisible">
                 <div class="number">2/6</div>
-                <img src="https://c0.wallpaperflare.com/preview/960/371/797/moscow-russia-pale-aesthetic.jpg" style="width:100%"> 
+                <img src="https://images.unsplash.com/photo-1585018823729-f345817a8e17?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:100%"> 
             </div>
-            <div class="slides">
+            <div class="slides unvisible">
                 <div class="number">3/6</div>
-                <img src="https://images.unsplash.com/photo-1507048331197-7d4ac70811cf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80" style="width: 100%;">
+                <img src="https://images.unsplash.com/photo-1480796927426-f609979314bd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width: 100%;">
             </div>
-            <div class="slides">
+            <div class="slides unvisible">
                 <div class="number">4/6</div>
-                <img src="https://images.unsplash.com/photo-1626437513709-7ed95e5d0008?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80"style="width:100%;"> 
+                <img src="https://images.unsplash.com/photo-1616987204912-0c2c3e88115e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"style="width:100%;"> 
             </div>
-            <div class="slides">
+            <div class="slides unvisible">
                 <div class="number">5/6</div>
-                <img src="https://images.unsplash.com/photo-1518627675569-e9d4fb90cdb5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80"style="width:100%;"> 
-            </div><div class="slides">
+                <img src="https://images.unsplash.com/photo-1634305117514-a3659444f29c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"style="width:100%;"> 
+            </div><div class="slides unvisible">
                 <div class="number">6/6</div>
                 <img src="https://plus.unsplash.com/premium_photo-1658506768241-c3321bc87cdc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"style="width:100%;"> 
             </div>
@@ -92,26 +95,60 @@
             </div>
             <div class="row">
                 <div class="column">
-                    <img class="demo cursor" src="https://wallpaperaccess.com/full/254381.jpg" style="width:100%" onclick="currentSlide(1)" alt="Like to Travelling Through All Around The World">
+                    <img class="demo cursor" src="https://images.unsplash.com/photo-1471922694854-ff1b63b20054?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80" style="width:100%" onclick="currentSlide(1)" alt="Like to Travelling Through All Around The World">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="https://c0.wallpaperflare.com/preview/960/371/797/moscow-russia-pale-aesthetic.jpg" style="width:100%" onclick="currentSlide(2)" alt="Enrapturing With The Glorious Landscapes">
+                    <img class="demo cursor" src="https://images.unsplash.com/photo-1585018823729-f345817a8e17?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:100%" onclick="currentSlide(2)" alt="Enrapturing With The Glorious Landscapes">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="https://images.unsplash.com/photo-1507048331197-7d4ac70811cf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80" style="width:100%" onclick="currentSlide(3)" alt="And Enjoy Cooking">
+                    <img class="demo cursor" src="https://images.unsplash.com/photo-1480796927426-f609979314bd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:100%" onclick="currentSlide(3)" alt="And Also Asian Culture">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="https://images.unsplash.com/photo-1626437513709-7ed95e5d0008?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" style="width:100%" onclick="currentSlide(4)" alt="Attractive With Cottacorge Style">
+                    <img class="demo cursor" src="https://images.unsplash.com/photo-1616987204912-0c2c3e88115e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:100%" onclick="currentSlide(4)" alt="Attractive With Cottacorge Style">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="https://images.unsplash.com/photo-1518627675569-e9d4fb90cdb5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80" style="width:100%" onclick="currentSlide(5)" alt="Extremmerly Like Winter Season">
+                    <img class="demo cursor" src="https://images.unsplash.com/photo-1634305117514-a3659444f29c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:100%" onclick="currentSlide(5)" alt="And Countryside Style">
                 </div>
                 <div class="column">
-                    <img class="demo cursor" src="https://plus.unsplash.com/premium_photo-1658506768241-c3321bc87cdc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:100%" onclick="currentSlide(6)" alt="And Also Autumn :)">
+                    <img class="demo cursor" src="https://plus.unsplash.com/premium_photo-1658506768241-c3321bc87cdc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:100%" onclick="currentSlide(6)" alt="Moreover Also Extremelly Like Autumn :)">
                 </div>
             </div>
         </div>
         <div class="col-2"></div>
+    </div>
+    <div class="row" >
+        <div class="row content1" style="clear:both">
+                <h2>What Is My <span> Ambitious</span> &#8595;</h2>
+                <div class="card" data-aos="fade-left">
+                    <img src="https://images.unsplash.com/photo-1661956602153-23384936a1d3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
+                    <div>  
+                        <h4>First Thing</h4>
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure soluta voluptas reprehenderit consequuntur! Sit fugit tempora eos? Corrupti, deleniti omnis, modi inventore blanditiis laborum quasi architecto error sint cumque exercitationem.
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum quas explicabo sint dolorum ullam eum doloremque veritatis similique eius, possimus quia labore, dolor debitis id iste enim. Repudiandae, minus natus.</p> 
+                        <a href=#>See More...</a>
+                    </div>
+                </div>
+
+                <div class="card" data-aos="fade-right">
+                    <img src="https://images.unsplash.com/photo-1504608524841-42fe6f032b4b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8ODd8fGJhY2tncm91bmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60">
+                    <div>
+                        <h4>Second Thing Thing</h4>
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure soluta voluptas reprehenderit consequuntur! Sit fugit tempora eos? Corrupti, deleniti omnis, modi inventore blanditiis laborum quasi architecto error sint cumque exercitationem.
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum quas explicabo sint dolorum ullam eum doloremque veritatis similique eius, possimus quia labore, dolor debitis id iste enim. Repudiandae, minus natus.</p> 
+                        <a href=#>See More...</a>
+                    </div>
+                </div>
+
+                <div class="card" data-aos="fade-left">
+                    <img src="https://images.unsplash.com/photo-1601136800312-d4dc1f50554b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
+                    <div>
+                        <h4>Third Thing</h4>
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure soluta voluptas reprehenderit consequuntur! Sit fugit tempora eos? Corrupti, deleniti omnis, modi inventore blanditiis laborum quasi architecto error sint cumque exercitationem.
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum quas explicabo sint dolorum ullam eum doloremque veritatis similique eius, possimus quia labore, dolor debitis id iste enim. Repudiandae, minus natus.</p> 
+                        <a href=#>See More...</a>
+                    </div>
+                </div>
+            </div>
     </div>
     <div class="row">
         <div class="col-12">
@@ -120,15 +157,46 @@
                     <div class="col-2 info">
                         <h4>For More Infomation</h4>
                         <ul>
-                            <li><i class='fas fa-envelope-square'></i>TBinh.@gmail.com</li>
+                            <li><span class="glyphicon">&#xe144;</span> &nbsp;TBinh.@gmail.com</li>
                             <li>(+84) 123-456-789</li>
                             <li><a href=https://Facebook.com>My FaceBook</a></li>
                             <li><a href=https://www.instagram.com>My Instagram</a></li>
                         </ul>
                     </div>
+                    <div class="col-3 info register">
+                        <h4>Register Your Info</h4>
+                        <ul>
+                            <li>
+                                Name: &nbsp;<input type="text" placeholder="Your Full Name" style="margin-left:29px">
+                            </li>
+                            <li>
+                                Email: &nbsp; <input type="email" placeholder="Your Email" style="margin-left:29px">
+                            </li>
+                            <li>
+                                Password: &nbsp; <input type="password" placeholder="Your Password">
+                            </li>
+                            <li><button class="btn btn-light">Register</button></li>
+                        </ul>
+                    </div>
+                    <div class="location">
+                        <h4>Location: </h4>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d149160.67342671475!2d106.441785584958!3d10.761733406908768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317529292e8d3dd1%3A0xf15f5aad773c112b!2zSOG7kyBDaMOtIE1pbmgsIFRow6BuaCBwaOG7kSBI4buTIENow60gTWluaCwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1666844287019!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12 end">
+            <h4>This Website Is Belong To Edward Phan</h4>
+        </div>
+    </div>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset:200,
+            duration:1000
+        });
+    </script>
 </body>
 </html>
